<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.FitWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.salvadorgonzales.appbd.MainAct"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/codProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/desProducto"
        android:layout_below="@+id/textView"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/act_codproducto"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/desProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/act_desproducto"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/act_cantidad"
        android:layout_below="@+id/desProducto"
        android:layout_alignStart="@+id/precioReal"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/precioReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/act_precioreal"
        android:layout_above="@+id/totalPrecio"
        android:layout_alignStart="@+id/desProducto" />

    <EditText
        android:id="@+id/totalPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Cantidad"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/act_totalreal"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_below="@+id/totalPrecio"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="45dp"
        android:text="@string/btn_save" />


    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/totalPrecio"
        android:layout_below="@+id/lista" />


</android.support.v7.widget.FitWindowsLinearLayout>
